complete emailMarketing Proj

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Suleman - Email Project</title>
 </head>
 <body>
-    <p>Project</p>
+    <h>Marketing Project</h>
+    <table border="3px;">
+        <tr>
+            <td>
+                <ol>
+                    <li>Amazon</li>
+                    <li>Software</li>
+                    <li>Biong</li>
+                </ol>
+            </td>
+            <td>
+                <img src="./image/boliviainteligente-0siCIqpIedM-unsplash (1).jpg" style="width:150px;height: 200px"; alt="amazon logo">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
